# esp32c3

./: .gitignore  Cargo.toml  Makefile  README.md  device.x
src/: apb_ctrl.rs  apb_saradc.rs  assist_debug.rs  efuse.rs  extmem.rs  gdma.rs  gpio.rs  gpio_sd.rs  i2c.rs  i2s.rs  interrupt_core0.rs  ledc.rs  lib.rs  rmt.rs  rtc_i2c.rs  rtccntl.rs  sensitive.rs  spi.rs  spi_mem.rs  sys_timer.rs  syscon.rs  system.rs  timg.rs  uart.rs  uhci.rs
src/apb_ctrl/: apb_ctrl_clk_out_en.rs  apb_ctrl_clkgate_force_on.rs  apb_ctrl_date.rs  apb_ctrl_ext_mem_pms_lock.rs  apb_ctrl_flash_ace0_addr.rs  apb_ctrl_flash_ace0_attr.rs  apb_ctrl_flash_ace0_size.rs  apb_ctrl_flash_ace1_addr.rs  apb_ctrl_flash_ace1_attr.rs  apb_ctrl_flash_ace1_size.rs  apb_ctrl_flash_ace2_addr.rs  apb_ctrl_flash_ace2_attr.rs  apb_ctrl_flash_ace2_size.rs  apb_ctrl_flash_ace3_addr.rs  apb_ctrl_flash_ace3_attr.rs  apb_ctrl_flash_ace3_size.rs  apb_ctrl_front_end_mem_pd.rs  apb_ctrl_host_inf_sel.rs  apb_ctrl_mem_power_down.rs  apb_ctrl_mem_power_up.rs  apb_ctrl_peri_backup_apb_addr.rs  apb_ctrl_peri_backup_config.rs  apb_ctrl_peri_backup_int_clr.rs  apb_ctrl_peri_backup_int_ena.rs  apb_ctrl_peri_backup_int_raw.rs  apb_ctrl_peri_backup_int_st.rs  apb_ctrl_peri_backup_mem_addr.rs  apb_ctrl_redcy_sig0.rs  apb_ctrl_redcy_sig1.rs  apb_ctrl_retention_ctrl.rs  apb_ctrl_rnd_data.rs  apb_ctrl_sdio_ctrl.rs  apb_ctrl_spi_mem_pms_ctrl.rs  apb_ctrl_spi_mem_reject_addr.rs  apb_ctrl_sysclk_conf.rs  apb_ctrl_tick_conf.rs  apb_ctrl_wifi_bb_cfg.rs  apb_ctrl_wifi_bb_cfg_2.rs  apb_ctrl_wifi_clk_en.rs  (+1 more)
svd/: esp32c3.base.svd  esp32c3.svd
(+1257 files in other folders)
