[package]
name = "esp32c3"
version = "0.1.2"
authors = ["Samir Shetty <samirshetty23@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/esp-rs/esp32c3"
description = "Peripheral access crate for the ESP32-C3"
keywords = ["no-std", "esp32-c3", "wifi", "embedded"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "svd/esp32c3.svd",
    "build.rs",
    "device.x"
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "1.0"
riscv = "0.7.0"
riscv-rt = { version = "0.8.0", optional = true }
vcell = "0.1"

[features]
default = []
rt = ["riscv-rt"]
